charts/istio/vs-jaeger.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-jaeger
  namespace: istio-system
spec:
  hosts:
  - REPLACE_ME
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jaeger-query
        port:
          number: 16686
